  Changes:
    - Provide list of forces GUI will be shown to remote interfaces while gathering statistics.
    - Added tracker module to pre-count entities before victory is reached.
  Bugfixes:
    - Prevent trigger victory when victory has been achieved before this mod was added.
    - Fixed furnaces-type entities not being part of the total machine count.
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 03.01.2024
  Bugfixes:
    - Fixed so that achievements function just like in vanilla.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 31.12.2023
  Features:
    - All values now have the full untruncated value in the tooltip.
  Changes:
    - Storage Tanks are now taken into account for the total pipeline length.
    - Clear player cursor before showing the GUI.
    - Remove hard mod compatabilities.
    - Provide winning force to remote interfaces while gathering statistics.
  Bugfixes:
    - Fix area explored not being calculated correctly.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 27.12.2023
  Features:
    - Add support for other mods to add custom entries to the GUI.
  Bugfixes:
    - Fix Player Kills not being tracked properly.
    - Fix typo "Distance Drove" to "Distance Driver". (Thank SpeckledFleebeedoo!)
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 13.12.2023
  Features:
    - Add Russian translation, thanks to Shadow_Man.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 13.12.2023
  Features:
    - Add new statistic "Total Enemy Kills"
  Changes:
    - (Internal) Add localization to all text so that it can be translated.